	* Add feature #6646 (old bug tracker): Possibility to disable enforcing of username field (Thanks to François Suter)
	* Fix #15659 (old bug tracker): Field fe_cruser_id is never set (Thanks to Jens Herden)
	* Fix #17686 (old bug tracker): Password change does not execute any validation
	* Fix #6308 (old bug tracker): Wrong marker in template (Thanks to Bjorn T. Hallberg)

2012-03-01 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to feature #34405: Fix CGL in tx_srfeuserregister_email (Thanks to Franz Holzinger)

2012-02-28 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #34405: Make use of Swift Mailer API

2012-02-25 Stanislas Rolland  <typo3@sjbr.ca>
	* fix regression on security issue: Information (and password) Disclosure in extension sr_feuser_register (Thanks to Franz Holzinger)

2012-02-24 Franz Holzinger  <franz@ttproducts.de>
	* add more parameters to the hooks for registrationProcess_afterSaveCreate, registrationProcess_afterSaveCreate and evalValues

2012-02-22 Stanislas Rolland  <typo3@sjbr.ca>
	* fix security issue: Information (and password) Disclosure in extension sr_feuser_register
	* fix security issue: sr_feuser_register: "edit account" page contains cleartext password in HTML source

2012-01-19 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #17137: store the token together with the user data before a setfixed command is executed

2012-01-18 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18019: Incorrect login URL code

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18083: Parser error on eval() in getShortUrl()

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18364: Initialize $prefixId in method tx_srfeuserregister_display::editForm

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #14416: Missing break in switch after preg

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18343: replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange